[package]
name = "polly"
version = "0.1.0"
authors = ["Mezner <mezner@russellmyers.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusoto_polly = "0.42.0"
rusoto_core = "0.42.0"
rodio = "0.10.0"
structopt = "0.3.7"
rand = "0.7.3"
termcolor = "1.0.5"
text_io = "0.1.7"
